--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.19.1",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -18,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "0.0.22",
+    "@react-email/render": "^1.0.1",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.19.3",
     "@uploadthing/react": "^6.7.2",
@@ -35,6 +37,7 @@
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "nuka-carousel": "^8.0.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
