--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@react-email/components": "0.0.22",
     "@react-email/render": "^1.0.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-table": "^8.19.3",
     "@uploadthing/react": "^6.7.2",
+    "axios": "^1.7.7",
     "base64url": "^3.0.1",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.3",
@@ -31,6 +33,7 @@
     "firebase": "^10.12.4",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
+    "jazzcash-checkout": "^1.0.0",
     "lucide-react": "^0.408.0",
     "mongodb": "^6.8.0",
     "mongosh": "^2.2.12",
@@ -54,6 +57,7 @@
     "resend": "^3.5.0",
     "sass": "^1.77.8",
     "shadcn-ui": "^0.2.3",
+    "stripe": "^16.12.0",
     "sweetalert2": "^11.6.13",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
