--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-email/components": "0.0.22",
     "@react-email/render": "^1.0.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.5.0",
     "@tanstack/react-table": "^8.19.3",
     "@uploadthing/react": "^6.7.2",
