--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "seed": "node seed.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -76,7 +77,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.19.1",
+    "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1"
   }
 }
