--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "firebase": "^10.12.4",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
