--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.4.2",
+    "@auth/prisma-adapter": "^2.6.0",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -41,7 +42,7 @@
     "mongodb": "^6.8.0",
     "mongosh": "^2.2.12",
     "next": "^14.2.5",
-    "next-auth": "^4.24.7",
+    "next-auth": "^4.24.8",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "nuka-carousel": "^8.0.1",
